--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -470,6 +470,7 @@
     <string name="battery_voltage">Battery Voltage</string>
     <string name="battery_level">Battery Level</string>
     <string name="battery_temperature">Battery Temperature</string>
+    <string name="battery_charging_current">Battery Charging Current</string>
     <string name="usb_fast_charge">USB Fast Charge</string>
     <string name="usb_fast_charge_summary">Device will charge faster when connected with USB. Replug your charger when changing this option.</string>
     <string name="blx">Battery Life eXtender</string>
