--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="device">Device</string>
     <string name="cpu">CPU</string>
     <string name="cpu_voltage">CPU Voltage</string>
+    <string name="cpu_hotplug">CPU Hotplug</string>
     <string name="gpu">GPU</string>
     <string name="battery">Battery</string>
 
@@ -126,4 +127,47 @@
     <string name="global_offset">Global Offset</string>
     <string name="override_vmin">Override Minimum Voltage</string>
     <string name="override_vmin_summary">Disable to remove manufacturer limits on undervolting</string>
+
+    <!-- CPU Hotplug -->
+    <string name="mpdecision">MPDecision</string>
+    <string name="mpdecision_summary">Qualcomm\'s hotplugging solution. You might get problems with changing frequencies when this is enabled.</string>
+    <string name="intelliplug">IntelliPlug</string>
+    <string name="intelliplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by faux123.</string>
+    <string name="profile">Profile</string>
+    <string name="profile_summary">The number in the parentheses indicates the amount of cores online at any time.</string>
+    <string name="insanity">InSaNiTy</string>
+    <string name="balanced">Balanced</string>
+    <string name="performance">Performance</string>
+    <string name="conservative">Conservative</string>
+    <string name="eco_insanity">Eco InSaNiTy</string>
+    <string name="eco_performance">Eco Performance</string>
+    <string name="eco_conservative">Eco Conservative</string>
+    <string name="tri">Tri</string>
+    <string name="eco">Eco</string>
+    <string name="strict">Strict</string>
+    <string name="eco_mode">Eco Mode</string>
+    <string name="eco_mode_summary">Battery saving mode for IntelliPlug.</string>
+    <string name="hysteresis">Hysteresis Value</string>
+    <string name="hysteresis_summary">The lower it is, the faster response.</string>
+    <string name="cpu_threshold">CPU Threshold</string>
+    <string name="cpu_threshold_summary">The lower, the less CPUs are used.</string>
+    <string name="debug">Debug</string>
+    <string name="debug_summary">Allows you to activate debug mask for operations.</string>
+    <string name="suspend">Suspend</string>
+    <string name="suspend_summary">Prevent to suspend.</string>
+    <string name="cpus_boosted">CPUs Boosted</string>
+    <string name="cpus_boosted_summary">Maximum number of CPUs boosted at the same time.</string>
+    <string name="min_cpu_online">Minimum CPU Online</string>
+    <string name="min_cpu_online_summary">Minimum number of CPUs that will be always online.</string>
+    <string name="max_cpu_online">Maximum CPU Online</string>
+    <string name="max_cpu_online_summary">Maximum number of CPUs that will be always online.</string>
+    <string name="max_cpu_online_screen_off">Maximum CPU Screen Off</string>
+    <string name="max_cpu_online_screen_off_summary">Maximum number of CPUs that will be online when the screen is off.</string>
+    <string name="suspend_defer_time">Suspend Defer Time</string>
+    <string name="defer_sampling">Defer Sampling</string>
+    <string name="boost_lock_duration">Boost Lock Duration</string>
+    <string name="boost_lock_duration_summary">Minimum interval a CPU is boosted.</string>
+    <string name="down_lock_duration">Down Lock Duration</string>
+    <string name="down_lock_duration_summary">Minimum interval a CPU is kept online.</string>
+    <string name="fshift">FShift</string>
 </resources>
