--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,14 @@
     <string name="down_lock_duration">Down Lock Duration</string>
     <string name="down_lock_duration_summary">Minimum interval a CPU is kept online.</string>
     <string name="fshift">FShift</string>
+    <string name="blu_plug">Blu_Plug</string>
+    <string name="blu_plug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by Code_Blue team.</string>
+    <string name="powersaver_mode">Powersaver Mode</string>
+    <string name="powersaver_mode_summary">Sets 1 CPU maximum online with frequency @1728MHz.</string>
+    <string name="up_threshold">Up Threshold</string>
+    <string name="up_threshold_summary">Over this threshold the driver will put one more core online.</string>
+    <string name="up_timer_cnt">Up Timer Control</string>
+    <string name="up_timer_cnt_summary">Control timer for up CPUs.</string>
+    <string name="down_timer_cnt">Down Timer Control</string>
+    <string name="down_timer_cnt_summary">Control timer for down CPUs.</string>
 </resources>
