--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="cpu_quiet_governor">CPUQuiet Governor</string>
     <string name="cpu_boost">CPU Boost</string>
     <string name="debug_mask">Debug Mask</string>
-    <string name="debug_mask_summary">Allows you to activate debug mask for CPU Boost operations.</string>
+    <string name="debug_mask_summary">Allows you to activate debug mask for operations.</string>
     <string name="interval">Interval</string>
     <string name="interval_summary">Minimum interval a CPU is boosted.</string>
     <string name="sync_threshold">Sync Threshold</string>
@@ -131,6 +131,7 @@
     <string name="override_vmin_summary">Disable to remove manufacturer limits on undervolting</string>
 
     <!-- CPU Hotplug -->
+    <string name="hotplug_warning">More than one hotplugging system is enabled!\nPlease only use one.</string>
     <string name="mpdecision">MPDecision</string>
     <string name="mpdecision_summary">Qualcomm\'s hotplugging solution. You might get problems with changing frequencies when this is enabled.</string>
     <string name="intelliplug">IntelliPlug</string>
@@ -153,8 +154,6 @@
     <string name="hysteresis_summary">The lower it is, the faster response.</string>
     <string name="cpu_threshold">CPU Threshold</string>
     <string name="cpu_threshold_summary">The higher, the less CPUs are used.</string>
-    <string name="debug">Debug</string>
-    <string name="debug_summary">Allows you to activate debug mask for operations.</string>
     <string name="suspend">Suspend</string>
     <string name="suspend_summary">Prevent to suspend.</string>
     <string name="cpus_boosted">CPUs Boosted</string>
@@ -182,6 +181,20 @@
     <string name="up_timer_cnt_summary">Control timer for up CPUs.</string>
     <string name="down_timer_cnt">Down Timer Control</string>
     <string name="down_timer_cnt_summary">Control timer for down CPUs.</string>
+    <string name="msm_hotplug">MSM Hotplug</string>
+    <string name="msm_hotplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by myfluxi.</string>
+    <string name="history_size">History Size</string>
+    <string name="history_size_summary">Number of samples taken in consideration for average load across CPUs. Lower means quicker/more erratic.</string>
+    <string name="update_rate">Update Rate</string>
+    <string name="update_rate_summary">Interval between taking samples of load across CPUs. Lower means quicker/more erratic.</string>
+    <string name="fast_lane_load">Fast Lane Load</string>
+    <string name="fast_lane_load_summary">Improve latencies by instantly putting online all CPUs if current load on any CPU is above a certain threshold.</string>
+    <string name="fast_lane_min_freq">Fast Lane Min Frequency</string>
+    <string name="fast_lane_min_freq_summary">Sets the minimum frequency the CPU scales down to when fast lane reaches the above load.</string>
+    <string name="offline_load">Offline Load</string>
+    <string name="offline_load_summary">Don\'t offline a CPU if it drops under the lower levels up threshold load.</string>
+    <string name="io_is_busy">IO is Busy</string>
+    <string name="io_is_busy_summary">Used to make the hotplug consider the I/O time as CPU load time.</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
