--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,6 +239,12 @@
     <string name="endurance_level_summary">A power saving profile.</string>
     <string name="quad_core_mode">Quad-Core mode</string>
     <string name="dual_core_mode">Dual-Core mode</string>
+    <string name="zen_decision">Zen Decision</string>
+    <string name="zen_decision_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by bbedward.</string>
+    <string name="wake_wait_time">Wake Wait Time</string>
+    <string name="wake_wait_time_summary">How long to wait before turning on any CPUs.</string>
+    <string name="bat_threshold_ignore">Battery Threshold Ignore</string>
+    <string name="bat_threshold_ignore_summary">Don\'t turn on any cores when charge is below the selected capacity.</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
