--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,6 +255,14 @@
     <string name="cycle_down_summary">Cycles to wait after the last hotplug event to unplug another core.</string>
     <string name="cycle_up">Cycle Up</string>
     <string name="cycle_up_summary">Cycles to wait after the last hotplug event to plug another core.</string>
+    <string name="core_control">Core Control</string>
+    <string name="core_control_summary">Qualcomm\'s hotplugging solution. Sorry you can\'t turn it off. #blameqcom</string>
+    <string name="busy_down_threshold">Busy Down Threshold</string>
+    <string name="busy_down_threshold_summary">Threshold when big CPUs should be turned off.</string>
+    <string name="busy_up_threshold">Busy Up Threshold</string>
+    <string name="busy_up_threshold_summary">Threshold when big CPUs should be turned on.</string>
+    <string name="offline_delay">Offline Delay</string>
+    <string name="offline_delay_summary">Time before turning off a CPU.</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
