--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="cpu">CPU</string>
     <string name="cpu_voltage">CPU Voltage</string>
     <string name="cpu_hotplug">CPU Hotplug</string>
+    <string name="thermal">Thermal</string>
     <string name="gpu">GPU</string>
     <string name="battery">Battery</string>
     <string name="settings">Settings</string>
@@ -263,6 +264,49 @@
     <string name="busy_up_threshold_summary">Threshold when big CPUs should be turned on.</string>
     <string name="offline_delay">Offline Delay</string>
     <string name="offline_delay_summary">Time before turning off a CPU.</string>
+
+    <!--Thermal-->
+    <string name="warning">Warning</string>
+    <string name="thermal_info">Use only one thermal driver from the following options, using more at the same time may cause unexpected behavior.</string>
+    <string name="thermald">Thermald</string>
+    <string name="thermald_summary">Stock Qualcomm thermal driver that prevents device from overheating. This should be disabled if current kernel has an alternative.</string>
+    <string name="intellithermal">Intellithermal</string>
+    <string name="intellithermal_summary">An in-kernel replacement for Qualcomm\'s Thermald. Developed by faux123.</string>
+    <string name="intellithermal_optimized">Intellithermal Optimized</string>
+    <string name="intellithermal_optimized_summary">An in-kernel replacement for Qualcomm\'s Thermald. Developed by faux123 and alucard_24.</string>
+    <string name="thermal_debug_mask_summary">Allows you to activate debug mask for thermal operations.</string>
+    <string name="vdd_restriction">VDD Restriction</string>
+    <string name="freq_throttle_temp">Frequency Throttle Temperature</string>
+    <string name="freq_throttle_temp_summary">Temperature to start throttling frequencies.</string>
+    <string name="cpu_throttle_temp">CPU Throttle Temperature</string>
+    <string name="cpu_throttle_temp_summary">Temperature to start shutting down CPUs.</string>
+    <string name="cpu_temp_hysteresis">CPU Temperature Hysteresis</string>
+    <string name="freq_step">Frequency Step</string>
+    <string name="immediately_limit_stop">Immediately Limit Stop</string>
+    <string name="poll">Poll</string>
+    <string name="temp_hysteresis">Temperature Hysteresis</string>
+    <string name="thermal_limit_low">Thermal Limit Low</string>
+    <string name="thermal_limit_high">Thermal Limit High</string>
+    <string name="temp_safety">Temperature Safety</string>
+    <string name="temp_throttle">Temperature Throttle</string>
+    <string name="temp_throttle_summary">SoC temperature limit toggle.</string>
+    <string name="temp_limit">Temperature Limit</string>
+    <string name="temp_limit_summary">If the temperature goes above, the thermal will throttle the CPU frequency to lower the temperature.</string>
+    <string name="freq_limit_debug">Frequency Limit Debug</string>
+    <string name="freq_limit_debug_summary">This allows to debug the CPUs throttle when the temperature reaches maximum.</string>
+    <string name="temp_limit_min_freq">Temperature Limit Minimum Frequency</string>
+    <string name="temp_limit_min_freq_summary">The thermal will use this frequency to throttle the maximum temperature.</string>
+    <string name="allowed_low_low">Phase 1: Allowed Low Low</string>
+    <string name="allowed_low_high">Phase 1: Allowed Low High</string>
+    <string name="allowed_low_freq">Phase 1: Allowed Low Frequency</string>
+    <string name="allowed_mid_low">Phase 2: Allowed Mid Low</string>
+    <string name="allowed_mid_high">Phase 2: Allowed Mid High</string>
+    <string name="allowed_mid_freq">Phase 2: Allowed Mid Frequency</string>
+    <string name="allowed_max_low">Phase 3: Allowed Max Low</string>
+    <string name="allowed_max_high">Phase 3: Allowed Max High</string>
+    <string name="allowed_max_freq">Phase 3: Allowed Max Frequency</string>
+    <string name="check_interval">Check Interval</string>
+    <string name="shutdown_temp">Shutdown Temperature</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
