Add hcube settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,6 +266,8 @@
     <string name="cycle_up_summary">Cycles to wait after the last hotplug event to plug another core.</string>
     <string name="core_control">Core Control</string>
     <string name="core_control_summary">Qualcomm\'s hotplugging solution. Sorry you can\'t turn it off. #blameqcom</string>
+    <string name="hcube">H-Cube</string>
+    <string name="hcube_summary">OnePlus\' modified Core Control.</string>
     <string name="busy_down_threshold">Busy Down Threshold</string>
     <string name="busy_down_threshold_summary">Threshold when big CPUs should be turned off.</string>
     <string name="busy_up_threshold">Busy Up Threshold</string>
