--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="battery">Battery</string>
     <string name="io_scheduler">I/O Scheduler</string>
     <string name="ksm">Kernel Samepage Merging</string>
+    <string name="lmk">Low Memory Killer</string>
     <string name="settings">Settings</string>
 
     <!-- Overall -->
@@ -504,6 +505,20 @@
     <string name="sleep_milliseconds">Sleep between scans</string>
     <string name="deferred_timer">Deferred timer</string>
     <string name="deferred_timer_summary">Reduces some CPU usage in return for less memory savings.</string>
+
+    <!-- Low Memory Killer -->
+    <string name="foreground_app">Foreground Applications</string>
+    <string name="lmk_adaptive">Adaptive Low Memory Killer</string>
+    <string name="lmk_adaptive_summary">Make LMK more aggressive dynamically when a thrashing scenario is detected.</string>
+    <string name="visible_app">Visible Applications</string>
+    <string name="secondary_server">Secondary Server</string>
+    <string name="hidden_app">Hidden Applications</string>
+    <string name="content_providers">Content Providers</string>
+    <string name="empty_app">Empty Applications</string>
+    <string name="very_light">Very light</string>
+    <string name="light">Light</string>
+    <string name="medium">Medium</string>
+    <string name="very_aggressive">Very Aggressive</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
